tests/paczka1/fuzzy1/97601640.err
Error in line 2: NIy S834 27,2
Error in line 1: eze3ZJSN S834 4,9
Error in line 9: S797 S834 86,3
Error in line 7: eze3ZJSN S994 98,3
Error in line 14: eze3ZJSN A547 252,48
Error in line 20: xb3 S834 69,8
Error in line 30: xb3 S994 37,5
Error in line 31: NIy S994 77,2
Error in line 32: eze3ZJSN A547 2,2
